# stockdb

./: .coverage  .gitignore  .sample_env  Makefile  README.md  bug_to_solve.txt  ccpi.csv  fact_daily_price.csv  fact_macro_data.csv  fgdp.csv  price.csv  pyproject.toml  requirements.txt  terminal.py  test.csv  trust.csv
.github/workflows/: python-app.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0019635491c4_.py  024d9269b054_.py  0a0d5dfcd2a7_.py  18cf36b5c13d_.py  2600c2b9dfef_.py  2720618578ea_.py  29ca995cdc8f_.py  37d40532472d_.py  3ecbf9ca462f_.py  3fd1f3a518f8_.py  46f73fa99f89_.py  4a00f57d33c3_.py  5840e016f8fe_.py  63fcda26eefe_.py  7a08e9cab5db_.py  7d270548be60_.py  7de8d9d52cba_.py  81ea989f7149_.py  87bbd5fd5d0d_.py  88c3dda9e500_.py  99dc8fe6ac5f_.py  9e930f40f0cb_.py  a72179fc3faf_.py  b736f7515117_init.py  b890ee477745_.py  bfeea52e9270_.py  c36848bdff5e_.py  c4cb0550db7b_.py  dec64439e5be_.py  e0471ea2c225_update_relationship_securities.py  e54230721057_.py  e9abaf502ff3_.py  f2c582378374_.py  f58fb3345d3a_.py
app/: __init__.py  decorators.py  helpers.py  loggers.py
app/core/models/: base_model.py  system_model.py
app/core/session/: current_system.py
app/database/: __init__.py  db_controller.py  db_models.py  setup_db_environment.py
app/database/macro/: macro_model.py
app/db/: __init__.py  database_controller.py  financial_statement_model.py  models.py  security_model.py  test.py
tests/: price.csv
tests/csv_sample_output/: annual_balance_sheet.csv  annual_cash_flow_statement.csv  annual_income_statement.csv  annual_liquidity_ratios.csv  annual_profitability_ratios.csv  news.csv
try_code/: try_economy_openbb.py  try_fmp.py
(+35 files in other folders)
